--- a/index.html
+++ b/index.html
@@ -165,7 +165,13 @@
 <br>
 <br>
     
+         <footer>
+<div style="text-align: center">
+      <p>Presentation Copyright Stephen Quigley, 2021</p>
+      </div>
+  </footer> 
     
+
   </body>
      </html>
 
