--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     
     <div class="textblock">
-        <h2>Interested in helping your students professionalize? Contact us <a href = "mailto: sjq4@pitt.edu">HERE</a>.</h2></div>
+        <h2>Interested in helping your students and colleagues use code to make cool multimodal documents? <a href = "mailto: sjq4@pitt.edu">Email</a> Stephen Quigley.</h2></div>
     
     <div>
      <img src="elevator.png" alt="Elevator Pitch Generator...image of an elevator" class="center-image" style="width:25%;height:25%;">
