--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
      <div class="textblock">
   <h1>Pedagogical and Tool Design Goals</h1>
     </div>
-<div> <img src="ResearchWt.png"
+<div> <img src="Research.png"
       class="center-image" alt="areas of research" style="width:50%;height:50%;">
     </div>
 
