--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
     <div class="row">
-        <center><h2>Multimodal work across Pitt departments offers the perfect opportunity for students to start working with code. Students can use Pitt Fuego to build presentations, project pages, portfolios, and other professional communication documents.</h2></center>
+        <center><h2>Multimodal composing across our curriculum offers the perfect opportunity for our students to start working with code.</h2></center>
   <div class="column">
       <br> <br>
     <img src="pgrid4.jpg" alt="GitHub cat logo">
@@ -50,28 +50,28 @@
     <img src="pgrid6.jpg" alt="Person walking up to the Cathedral of learning at University of Pittsburgh">
   </div>
 </div>
-       <center><h5>Pitt Fuego :  Think  : Code + Rhetoric & Communication
+       <center><h5>Pitt Fuego :  Think  : Code + Writing and Communicating
            </h5></center>
 <br>
 <br>
 <br>
 <br>
 
+<center><a href="https://jem332.github.io/Electrate-Fuego/" class="button">Ice</a></center>
 
 
-  <center><a href="https://anc214.github.io/anna-chiaro/" class="button">Sample Introduction</a></center>
     <br>
     <br>
 
-<center><a href="http://pitt.edu/~smm291/" class="button">Sample Digital Portfolio</a></center>
+<center><a href="https://sites.pitt.edu/~dls170/" class="button">Digital Portfolio</a></center>
 
 
-          
+
 
 
 
    <div class="textblock">
-  <h1>Pitt Fuego is designed to be a low-floor, high-ceiling tool for <em>working with code</em></h1>
+  <h1>Pitt Fuego provides a low-floor, high-ceiling tool for <em>working with code</em></h1>
 <br>
        <h3>Key Components</h3>
 <ul>
@@ -85,32 +85,19 @@
 
 </ul>
     </div>
-<br>
-<br>
-<br>
-<br>
+
 
      <div class="textblock">
   <h1>Pedagogical and Tool Design Goals</h1>
     </div>
-<div> <img src="Research.png"
+<div> <img src="research.png"
       class="center-image" alt="areas of research" style="width:50%;height:50%;">
     </div>
 
-<br>
-<br>
-<br>
-<br>
+
 
         <div class="textblock">
-  <h1>What's the data say? <em>Working with code</em> in your classroom will lead to new possibilities for composing and new pathways for student empowerment.</h1>
-        <br>
-<ul>
-  <li>makes working with code easy and rewarding</li>
-  <li>encourages students to seek out affinity spaces</li>
-  <li>gives students confidence to learn more about code</li>
-  <li>introduces students to essential computer science concepts</li>
-            </ul>
+  <h1>What's the data say? <em>Working with code</em> in the composition classroom will lead to new possibilities for composing and new pathways for student empowerment. </h1>
  </div>
 
 
@@ -121,23 +108,13 @@
     </div>
 
 
-    <!-- Test speech: Hi, I'm Anthony Pascarella. I'm a senior majoring in UX design and I'm working with Dr. Quigley to improve Pitt Fuego's usabilty and accessibility.
-
-    User Experience Design centers on designing products around the user. It focuses on how the user interacts and experiences the products. Making the product more accessible and intuitive means the user benefits much more from it.
-
-    Moving forward, Pitt Fuego is entering an ongoing testing and interation phase to become more user-friendly and accessible to all potential students and instructors. We are working to both isolate issues that detract from a user-centered design and to fix them in such a way that makes Pitt Fuego an even greater coding instruction tool.
-    -->
-
     <div class="textblock">
-        <h1>Pitt Fuego has entered an ongoing testing and iteration phase to improve usability and accessibility for all users. We're working to make Pitt Fuego an even better coding instruction tool, but also a more robust communication tool for a variety of purposes.</h1>
-                <br>
-                <br>
+  <h1>Designed to support the kinds of work we are already doing with our students.</h1>
+    </div>
+     <div>
+     <img src="Canons.png" alt="Canons of Rhetoric" class="center-image" style="width:50%;height:50%;">
     </div>
 
-    <figure>
-        <img src="UX_design_graphic.png" alt="Cycle of UX design" class="center-image" style="width:33%;height:33%;">
-        <figcaption><center>From Nielsen Norman Group</center></figcaption>
-    </figure>
 
     <br>
 <br>
@@ -150,8 +127,10 @@
 <br>
 <br>
 
+
+
     <div class="textblock">
-        <h1>Interested in helping your students professionalize by <em>working with code?</em> Send us an <a href="mailto:sjq4@pitt.edu">Email</a></h1></div>
+        <h2>Interested in helping your students and colleagues use code to make cool multimodal documents? <a href = "mailto: sjq4@pitt.edu">Email</a> Stephen Quigley.</h2></div>
 
     <div>
      <img src="elevator.png" alt="Elevator Pitch Generator...image of an elevator" class="center-image" style="width:25%;height:25%;">
@@ -185,6 +164,12 @@
 
 <br>
 <br>
+
+         <footer>
+<div style="text-align: center">
+      <p>Presentation Copyright Stephen Quigley, 2021</p>
+      </div>
+  </footer>
 
 
   </body>
