--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
     <div class="row">
-        <center><h2>Multimodal composing across our curriculum offers the perfect opportunity for our students to start working with code.</h2></center>
+        <center><h2>Multimodal composing across the curriculum offers the perfect opportunity for our students to start working with code.</h2></center>
   <div class="column">
       <br> <br>
     <img src="pgrid4.jpg" alt="GitHub cat logo">
