--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     <img src="pgrid6.jpg" alt="Person walking up to the Cathedral of learning at University of Pittsburgh">
   </div>
 </div>
-       <center><h5>Pitt Fuego :  Think  : Code + Writing and Communicating
-           </h5></center>
+       <center><h4>Pitt Fuego :  Think  : Code + Writing and Communicating
+       </h4></center>
 <br>
 <br>
 <br>
 <br>
 
-<center><a href="https://jem332.github.io/Electrate-Fuego/" class="button">Ice</a></center>
+<center><a href="https://jem332.github.io/Electrate-Fuego/" class="button">Introductions</a></center>
 
 
     <br>
@@ -90,9 +90,8 @@
      <div class="textblock">
   <h1>Pedagogical and Tool Design Goals</h1>
     </div>
-<div> <img src="research.png"
-      class="center-image" alt="areas of research" style="width:50%;height:50%;">
-    </div>
+<img src="research.png" class="center-image" alt="areas of research" style="width:50%;">
+
 
 
 
