--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <h1>Designed to support the kinds of work we are already doing with our students.</h1>
     </div>
      <div>
-     <img src="Canons.png" alt="Canons of Rhetoric" class="center-image" style="width:50%;height:50%;">
+     <img src="canons.png" alt="Canons of Rhetoric" class="center-image" style="width:50%;height:50%;">
     </div>
 
 
